add paritydb default

--- a/templates/polkadot.service.j2
+++ b/templates/polkadot.service.j2
@@ -8,7 +8,8 @@ ExecStart=/usr/local/bin/polkadot \
          --name polkadot-dummy \
          --validator \
          --rpc-methods=Unsafe \
-         --chain={{ chain }}
+         --chain={{ chain }} \
+         --database paritydb
 
 [Install]
 WantedBy=multi-user.target
