include rpc port flag in dummy config

--- a/templates/polkadot.service.j2
+++ b/templates/polkadot.service.j2
@@ -9,6 +9,7 @@ ExecStart=/usr/local/bin/polkadot \
          --validator \
          --rpc-methods=Unsafe \
          --chain={{ chain }} \
+         --rpc-port {{ api_rpc_port }} \
          --database paritydb
 
 [Install]
